# project_management

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md
backend/: AGENTS.md  README.md  pyproject.toml
backend/app/: ai.py  auth.py  board.py  db.py  main.py  users.py
backend/static/: index.html
backend/tests/: conftest.py  test_ai.py  test_auth.py  test_board.py  test_boards.py  test_health.py  test_users.py
docs/: DATABASE.md  PLAN.md  code_review.md
frontend/: AGENTS.md  package.json  playwright.config.ts
frontend/src/app/: page.test.tsx  page.tsx
frontend/src/components/: BoardSwitcher.test.tsx  BoardSwitcher.tsx  ChatSidebar.test.tsx  ChatSidebar.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx  LoginForm.test.tsx  LoginForm.tsx  NewCardForm.tsx
frontend/src/lib/: api.ts  kanban.ts
frontend/tests/: auth.spec.ts  boards.spec.ts  card-metadata.spec.ts  chat.spec.ts  helpers.ts  kanban.spec.ts  persistence.spec.ts
scripts/: AGENTS.md  start.bat  start.sh  stop.bat  stop.sh
