[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for the Project Management MVP"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "uvicorn[standard]>=0.50.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "respx>=0.23.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
